🪛 fix: Scroll alignment

--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -12,7 +12,6 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    overflow-x: hidden;
 
     .hero-container {
         padding: 24vh 2vw 10vh 2vw;
